--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,8 +16,11 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.main.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.feature.login.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.TravelMate.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
